--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
             const assetDetailContainer = document.getElementById('asset-detail');
             const welcomeMessage = document.getElementById('welcome-message');
 
+            // --- DEKLARACE VŠECH POMOCNÝCH FUNKCÍ ---
+
             function flattenData(data) {
                 let flat = {};
                 for (const key in data) {
@@ -574,11 +576,35 @@
                 }
             }
             
-            // Initialization
+            // --- INICIALIZACE APLIKACE ---
             try {
-                // ... (data fetching logic from previous step)
+                const response = await fetch('/.netlify/functions/get-data');
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                const data = await response.json();
+
+                if (!data || !data.primarni || !data.podpurna || !data.agendy || !data.options) {
+                    throw new Error("Načtená data nemají správnou strukturu.");
+                }
+
+                assetData = {
+                    primarni: data.primarni,
+                    podpurna: data.podpurna,
+                    agendy: data.agendy
+                };
+                sharedOptions = data.options;
+                
+                allAssets = flattenData(assetData);
+                buildParentMap(assetData);
+                buildNav(assetData, sidebar);
+                welcomeMessage.querySelector('h2').textContent = 'Vítejte v evidenci aktiv';
+                welcomeMessage.querySelector('p').textContent = 'Vyberte položku z menu vlevo pro zobrazení detailů.';
+
             } catch (error) {
-                // ... (error handling)
+                console.error('Chyba při načítání dat:', error);
+                welcomeMessage.querySelector('h2').textContent = 'Chyba při načítání dat';
+                welcomeMessage.querySelector('p').textContent = 'Zkuste prosím obnovit stránku. Chyba: ' + error.message;
             }
         });
     </script>
