--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
                 <div id="welcome-message" class="text-center text-gray-500">
                     <h2 class="text-2xl font-semibold mb-2">Načítám data...</h2>
+                    <p>Prosím čekejte.</p>
                 </div>
                 <div id="asset-detail" class="hidden">
                     <!-- Asset details will be rendered here -->
