--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
     <script>
         // Vaše Firebase konfigurace
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            databaseURL: "YOUR_DATABASE_URL",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+  apiKey: "AIzaSyBcoossk-fHBUrNd3x2Dd3bS-auCcvgwEk",
+  authDomain: "aktiva-vitkov.firebaseapp.com",
+  databaseURL: "https://aktiva-vitkov-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "aktiva-vitkov",
+  storageBucket: "aktiva-vitkov.firebasestorage.app",
+  messagingSenderId: "6167416010",
+  appId: "1:6167416010:web:ba5cca4eb0aa0eac343833"
+};
 
         // Inicializace Firebase
         firebase.initializeApp(firebaseConfig);
