--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <h1 class="text-2xl font-bold text-gray-700">Evidence aktiv Městského úřadu Vítkov</h1>
             <div>
                 <span id="user-info" class="text-sm text-gray-600 mr-4"></span>
+                <button id="user-management-button" class="hidden px-4 py-2 text-sm text-white bg-gray-600 rounded-md hover:bg-gray-700 mr-2">Správa uživatelů</button>
                 <button id="logout-button" class="px-4 py-2 text-sm text-white bg-red-600 rounded-md hover:bg-red-700">Odhlásit se</button>
             </div>
         </header>
