--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         ::-webkit-scrollbar-thumb:hover { background: #555; }
         .sidebar-item { cursor: pointer; transition: background-color 0.2s ease-in-out; }
         .sidebar-item:hover { background-color: #e5e7eb; }
-        .sidebar-item.active { background-color: #d1d5db; font-weight: 600; }
+        .sidebar-item.active, #nav-btn-users.active { background-color: #d1d5db; font-weight: 600; }
         .asset-link { color: #2563eb; text-decoration: underline; cursor: pointer; }
         .asset-link:hover { color: #1d4ed8; }
         .details-grid { display: grid; grid-template-columns: auto 1fr; gap: 1rem 2rem; align-items: start; }
