--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evidence aktiv - MěÚ Vítkov</title>
- <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%23e0e7ff'/%3E%3Crect x='35' y='35' width='30' height='30' rx='5' fill='%234f46e5' stroke='%233730a3' stroke-width='2'/%3E%3Ccircle cx='25' cy='25' r='10' fill='%23a5b4fc'/%3E%3Ccircle cx='75' cy='25' r='10' fill='%23a5b4fc'/%3E%3Ccircle cx='25' cy='75' r='10' fill='%23a5b4fc'/%3E%3Ccircle cx='75' cy='75' r='10' fill='%23a5b4fc'/%3E%3Cline x1='35' y1='40' x2='25' y2='30' stroke='%236b7280' stroke-width='3' stroke-linecap='round'/%3E%3Cline x1='65' y1='40' x2='75' y2='30' stroke='%236b7280' stroke-width='3' stroke-linecap='round'/%3E%3Cline x1='35' y1='60' x2='25' y2='70' stroke='%236b7280' stroke-width='3' stroke-linecap='round'/%3E%3Cline x1='65' y1='60' x2='75' y2='70' stroke='%236b7280' stroke-width='3' stroke-linecap='round'/%3E%3C/svg%3E">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%23e0e7ff'/%3E%3Crect x='35' y='35' width='30' height='30' rx='5' fill='%234f46e5' stroke='%233730a3' stroke-width='2'/%3E%3Ccircle cx='25' cy='25' r='10' fill='%23a5b4fc'/%3E%3Ccircle cx='75' cy='25' r='10' fill='%23a5b4fc'/%3E%3Ccircle cx='25' cy='75' r='10' fill='%23a5b4fc'/%3E%3Ccircle cx='75' cy='75' r='10' fill='%23a5b4fc'/%3E%3Cline x1='35' y1='40' x2='25' y2='30' stroke='%236b7280' stroke-width='3' stroke-linecap='round'/%3E%3Cline x1='65' y1='40' x2='75' y2='30' stroke='%236b7280' stroke-width='3' stroke-linecap='round'/%3E%3Cline x1='35' y1='60' x2='25' y2='70' stroke='%236b7280' stroke-width='3' stroke-linecap='round'/%3E%3Cline x1='65' y1='60' x2='75' y2='70' stroke='%236b7280' stroke-width='3' stroke-linecap='round'/%3E%3C/svg%3E">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -102,6 +102,6 @@
         </div>
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
