Oprava nové verze

--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         </div>
     </div>
 
-    <script type="module" src="./app.js"></script>
+    <script src="./app.js" defer></script>
 </body>
 </html>
